--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,8 @@ description-file = "README.md"
 requires-python = ">=3.7"
 requires = [
     "fastapi-users >= 6.1.2",
-    "sqlalchemy >=1.3.13,<1.4",
-    "databases >=0.3.0,<0.5"
+    "sqlalchemy >=1.4",
+    "databases >=0.5"
 ]
 
 [tool.flit.metadata.urls]
