--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,4 +28,4 @@ requires = [
 ]
 
 [tool.flit.metadata.urls]
-Documentation = "https://frankie567.github.io/fastapi-users"
+Documentation = "https://fastapi-users.github.io/fastapi-users"
