Fix database URL

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,9 @@ jobs:
       matrix:
         python_version: [3.7, 3.8, 3.9, '3.10']
         database_url: [
-          'sqlite+aiosqlite:///./test-sqlalchemy-user.db',
-          'postgresql+asyncpg://fastapiusers@fastapiuserspassword@localhost:5432/test-sqlalchemy-user',
-          'mysql+aiomysql://root@fastapiuserspassword@localhost:3306/test-sqlalchemy-user',
+          'sqlite+aiosqlite:///./fastapiusers.db',
+          'postgresql+asyncpg://fastapiusers@fastapiuserspassword@localhost:5432/fastapiusers',
+          'mysql+aiomysql://root@fastapiuserspassword@localhost:3306/fastapiusers',
         ]
 
     steps:
