--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,6 @@ name: Build
 on: [push, pull_request]
 
 jobs:
-
   test:
     runs-on: ubuntu-latest
 
@@ -28,39 +27,44 @@ jobs:
           - 3306:3306
         env:
           MARIADB_ROOT_PASSWORD: fastapiuserspassword
+          MARIADB_DATABASE: fastapiusers
+          MARIADB_USER: fastapiusers
+          MARIADB_PASSWORD: fastapiuserspassword
 
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.7, 3.8, 3.9, '3.10']
-        database_url: [
-          'sqlite+aiosqlite:///./fastapiusers.db',
-          'postgresql+asyncpg://fastapiusers:fastapiuserspassword@localhost:5432/fastapiusers',
-          'mysql+aiomysql://root:fastapiuserspassword@localhost:3306/fastapiusers',
-        ]
+        python_version: [3.7, 3.8, 3.9, "3.10"]
+        database_url:
+          [
+            "sqlite+aiosqlite:///./fastapiusers.db",
+            "postgresql+asyncpg://fastapiusers:fastapiuserspassword@localhost:5432/fastapiusers",
+            "mysql+aiomysql://root:fastapiuserspassword@localhost:3306/fastapiusers",
+          ]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python_version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.dev.txt
-    - name: Test with pytest
-      env:
-        DATABASE_URL: ${{ matrix. database_url }}
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      run: |
-        pytest --cov=fastapi_users_db_sqlalchemy/
-        codecov
-    - name: Build and install it on system host
-      run: |
-        flit build
-        flit install --python $(which python)
-        python test_build.py
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python_version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.dev.txt
+      - name: Test with pytest
+        env:
+          DATABASE_URL: ${{ matrix.database_url }}
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        run: |
+          pytest --cov=fastapi_users_db_sqlalchemy/
+          codecov
+      - name: Build and install it on system host
+        run: |
+          git status
+          flit build
+          flit install --python $(which python)
+          python test_build.py
 
   release:
     runs-on: ubuntu-latest
@@ -68,18 +72,18 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python
-      uses: actions/setup-python@v1
-      with:
-        python-version: 3.7
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.dev.txt
-    - name: Release on PyPI
-      env:
-        FLIT_USERNAME: ${{ secrets.FLIT_USERNAME }}
-        FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
-      run: |
-        flit publish
+      - uses: actions/checkout@v1
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.dev.txt
+      - name: Release on PyPI
+        env:
+          FLIT_USERNAME: ${{ secrets.FLIT_USERNAME }}
+          FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
+        run: |
+          flit publish
