Fix SQLAlchemy test DB name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
         python_version: [3.7, 3.8, 3.9, "3.10"]
         database_url:
           [
-            "sqlite+aiosqlite:///./fastapiusers.db",
+            "sqlite+aiosqlite:///./test-fastapiusers.db",
             "postgresql+asyncpg://fastapiusers:fastapiuserspassword@localhost:5432/fastapiusers",
             "mysql+aiomysql://root:fastapiuserspassword@localhost:3306/fastapiusers",
           ]
