--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python_version: [3.7, 3.8, 3.9, "3.10"]
+        python_version: [3.7, 3.8, 3.9, '3.10', '3.11']
         database_url:
           [
             "sqlite+aiosqlite:///./test-fastapiusers.db",
@@ -45,25 +45,31 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python_version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.dev.txt
-      - name: Test with pytest
+          pip install hatch
+          hatch env create
+      - name: Lint and typecheck
+        run: |
+          hatch run lint-check
+      - name: Test
         env:
           DATABASE_URL: ${{ matrix.database_url }}
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         run: |
-          pytest --cov=fastapi_users_db_sqlalchemy/
-          codecov
+          hatch run test-cov-xml
+      - uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
       - name: Build and install it on system host
         run: |
-          git status
-          flit build
-          flit install --python $(which python)
+          hatch build
+          pip install dist/fastapi_users_db_sqlalchemy-*.whl
           python test_build.py
 
   release:
@@ -72,18 +78,26 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: 3.7
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.dev.txt
-      - name: Release on PyPI
+          pip install hatch
+      - name: Build and publish on PyPI
         env:
-          FLIT_USERNAME: ${{ secrets.FLIT_USERNAME }}
-          FLIT_PASSWORD: ${{ secrets.FLIT_PASSWORD }}
+          HATCH_INDEX_USER: ${{ secrets.HATCH_INDEX_USER }}
+          HATCH_INDEX_AUTH: ${{ secrets.HATCH_INDEX_AUTH }}
         run: |
-          flit publish
+          hatch build
+          hatch publish
+      - name: Create release
+        uses: ncipollo/release-action@v1
+        with:
+          draft: true
+          body: ${{ github.event.head_commit.message }}
+          artifacts: dist/*.whl,dist/*.tar.gz
+          token: ${{ secrets.GITHUB_TOKEN }}
