--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,3 @@
-[tool.isort]
-profile = "black"
-
 [tool.mypy]
 plugins = "sqlalchemy.ext.mypy.plugin"
 
@@ -8,33 +5,86 @@ plugins = "sqlalchemy.ext.mypy.plugin"
 asyncio_mode = "auto"
 addopts = "--ignore=test_build.py"
 
-[build-system]
-requires = ["flit_core >=2,<3"]
-build-backend = "flit_core.buildapi"
+[tool.ruff]
+extend-select = ["I"]
 
-[tool.flit.metadata]
-module = "fastapi_users_db_sqlalchemy"
-dist-name = "fastapi-users-db-sqlalchemy"
-author = "François Voron"
-author-email = "fvoron@gmail.com"
-home-page = "https://github.com/fastapi-users/fastapi-users-db-sqlalchemy"
+[tool.hatch]
+
+[tool.hatch.metadata]
+allow-direct-references = true
+
+[tool.hatch.version]
+source = "regex_commit"
+commit_extra_args = ["-e"]
+path = "fastapi_users_db_sqlalchemy/__init__.py"
+
+[tool.hatch.envs.default]
+dependencies = [
+    "aiosqlite",
+    "asyncpg",
+    "aiomysql",
+    "pytest",
+    "pytest-asyncio",
+    "black",
+    "mypy",
+    "pytest-cov",
+    "pytest-mock",
+    "asynctest",
+    "httpx",
+    "asgi_lifespan",
+    "ruff",
+    "sqlalchemy[asyncio,mypy]",
+]
+
+[tool.hatch.envs.default.scripts]
+test = "pytest --cov=fastapi_users_db_sqlalchemy/ --cov-report=term-missing --cov-fail-under=100"
+test-cov-xml = "pytest --cov=fastapi_users_db_sqlalchemy/ --cov-report=xml --cov-fail-under=100"
+lint = [
+  "black . ",
+  "ruff --fix .",
+  "mypy fastapi_users_db_sqlalchemy/",
+]
+lint-check = [
+  "black --check .",
+  "ruff .",
+  "mypy fastapi_users_db_sqlalchemy/",
+]
+
+[tool.hatch.build.targets.sdist]
+support-legacy = true  # Create setup.py
+
+[build-system]
+requires = ["hatchling", "hatch-regex-commit"]
+build-backend = "hatchling.build"
+
+[project]
+name = "fastapi-users-db-sqlalchemy"
+authors = [
+    { name = "François Voron", email = "fvoron@gmail.com" },
+]
+description = "FastAPI Users database adapter for SQLAlchemy"
+readme = "README.md"
+dynamic = ["version"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Development Status :: 5 - Production/Stable",
+    "Framework :: FastAPI",
     "Framework :: AsyncIO",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3 :: Only",
     "Topic :: Internet :: WWW/HTTP :: Session",
 ]
-description-file = "README.md"
 requires-python = ">=3.7"
-requires = [
+dependencies = [
     "fastapi-users >= 10.0.0",
     "sqlalchemy[asyncio] >=1.4",
 ]
 
-[tool.flit.metadata.urls]
+[project.urls]
 Documentation = "https://fastapi-users.github.io/fastapi-users"
+Source = "https://github.com/fastapi-users/fastapi-users-db-sqlalchemy"
